--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Turkey Dinner",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Alerts about the next roll",
+  "description": "For Chromium+Webkit developers waiting for the next roll.",
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "not loaded",
@@ -11,6 +11,7 @@
   "background": { "scripts": ["jquery.min.js", "shared.js", "fetch.js"] },
   
   "permissions": [
-    "http://git.chromium.org/"
+    "http://git.chromium.org/",
+    "http://webkit-commit-queue.appspot.com/"
   ]
 }
