--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "default_title": "not loaded",
     "default_popup": "popup.html"
   },
-  "background": { "scripts": ["jquery.min.js", "linkify.js", "shared.js", "fetch.js"] },
+  "background": { "scripts": ["jquery-1.8.0.min.js", "linkify.js", "shared.js", "fetch.js"] },
   
   "permissions": [
       "http://git.chromium.org/",
