--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,9 @@
     "default_popup": "popup.html"
   },
   "background": { "scripts": ["jquery-1.8.0.min.js", "linkify.js", "shared.js", "fetch.js"] },
-  
+  "content_security_policy": "script-src 'self' https://www.google.com/; object-src 'self'",
   "permissions": [
+      "https://www.google.com/jsapi",
       "http://codereview.chromium.org/",
       "http://git.chromium.org/",
       "http://webkit-commit-queue.appspot.com/",
