--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Turkey Dinner",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "For Chromium+Webkit developers waiting for the next roll.",
+  "description": "For Chromium+Blink developers waiting for the next roll.",
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "not loaded",
