--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "default_title": "not loaded",
     "default_popup": "popup.html"
   },
-  "background": { "scripts": ["jquery-1.8.0.min.js", "linkify.js", "shared.js", "fetch.js"] },
+  "background": { "scripts": ["jquery-1.8.0.min.js", "q.js", "linkify.js", "shared.js", "fetch.js"] },
   "content_security_policy": "script-src 'self' https://www.google.com/; object-src 'self'",
   "permissions": [
       "https://chromium-build.appspot.com/",
